--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -2,8 +2,8 @@ name: Mise à jour automatique de l'ATIS
 
 on:
   schedule:
-    - cron: '0,30 * * * *'  # Exécute 2 fois par heure (à la 0ème et 30ème minute)
-  workflow_dispatch:  # Permet de lancer manuellement depuis GitHub
+    - cron: '22,52 * * * *'  # Exécute 2 fois par heure
+  workflow_dispatch:  # Permet de lancer manuellement
 
 jobs:
   update-atis:
@@ -16,11 +16,23 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y ffmpeg
-          pip install git+https://github.com/openai/whisper.git
+          pip install git+https://github.com/openai/whisper.git requests pydub
 
-      - name: Enregistrer le flux ATIS
+      - name: Enregistrer le flux ATIS avec Python
         run: |
-          ffmpeg -i "http://www.liveatc.net/hlisten.php?mount=eetn2_atis&icao=eetn" -t 60 -y atis_tallinn.mp3
+          python3 - <<EOF
+          import requests
+          from pydub import AudioSegment
+          import io
+
+          url = "http://www.liveatc.net/hlisten.php?mount=eetn2_atis&icao=eetn"
+          response = requests.get(url, stream=True)
+
+          with open("atis_tallinn.mp3", "wb") as f:
+              for chunk in response.iter_content(chunk_size=1024):
+                  if chunk:
+                      f.write(chunk)
+          EOF
 
       - name: Transcrire l'audio avec Whisper
         run: |
