--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -2,7 +2,7 @@ name: Mise à jour automatique de l'ATIS
 
 on:
   schedule:
-    - cron: '22,52 * * * *'  # Exécute 2 fois par heure
+    #- cron: '0,30 * * * *'  # Exécute 2 fois par heure
   workflow_dispatch:  # Permet de lancer manuellement
 
 jobs:
@@ -16,23 +16,18 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y ffmpeg
-          pip install git+https://github.com/openai/whisper.git requests pydub
 
-      - name: Enregistrer le flux ATIS avec Python
+      - name: Enregistrer le flux ATIS avec ffmpeg
         run: |
-          python3 - <<EOF
-          import requests
-          from pydub import AudioSegment
-          import io
+          ffmpeg -headers "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
+                 -headers "Referer: https://www.liveatc.net/" \
+                 -i "https://s1-fmt2.liveatc.net/eetn2_atis" \
+                 -t 60 \
+                 -y atis_tallinn.mp3
 
-          url = "http://www.liveatc.net/hlisten.php?mount=eetn2_atis&icao=eetn"
-          response = requests.get(url, stream=True)
-
-          with open("atis_tallinn.mp3", "wb") as f:
-              for chunk in response.iter_content(chunk_size=1024):
-                  if chunk:
-                      f.write(chunk)
-          EOF
+      - name: Installer Whisper
+        run: |
+          pip install git+https://github.com/openai/whisper.git
 
       - name: Transcrire l'audio avec Whisper
         run: |
