--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -2,7 +2,7 @@ name: Mise à jour automatique de l'ATIS
 
 on:
   schedule:
-    #- cron: '0,30 * * * *'  # Exécute 2 fois par heure
+    - cron: '0,30 * * * *'  # Exécute 2 fois par heure
   workflow_dispatch:  # Permet de lancer manuellement
 
 jobs:
