--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -15,15 +15,14 @@ jobs:
       - name: Installer les dépendances
         run: |
           sudo apt update
-          sudo apt install -y ffmpeg
+          sudo apt install -y ffmpeg curl
 
-      - name: Enregistrer le flux ATIS avec ffmpeg
+      - name: Enregistrer le flux ATIS avec curl et ffmpeg
         run: |
-          ffmpeg -headers "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
-                 -headers "Referer: https://www.liveatc.net/" \
-                 -i "https://s1-fmt2.liveatc.net/eetn2_atis" \
-                 -t 60 \
-                 -y atis_tallinn.mp3
+          curl -s -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
+               -e "https://www.liveatc.net/" \
+               "https://s1-fmt2.liveatc.net/eetn2_atis" | \
+          ffmpeg -i pipe:0 -t 60 -y atis_tallinn.mp3
 
       - name: Installer Whisper
         run: |
