--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -19,10 +19,22 @@ jobs:
           echo "atis_tallinn.mp3" >> .gitignore
           echo "atis_tallinn.txt" >> .gitignore
 
-      - name: Installer les dépendances
+      - name: Installer les dépendances système
         run: |
           sudo apt update
           sudo apt install -y ffmpeg curl
+
+      - name: Configurer le cache Python
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Installer Whisper (avec cache)
+        run: |
+          pip install git+https://github.com/openai/whisper.git
 
       - name: Enregistrer le flux ATIS avec curl et ffmpeg
         run: |
@@ -30,10 +42,6 @@ jobs:
                -e "https://www.liveatc.net/" \
                "https://s1-fmt2.liveatc.net/eetn2_atis" | \
           ffmpeg -i pipe:0 -t 60 -y atis_tallinn.mp3
-
-      - name: Installer Whisper
-        run: |
-          pip install git+https://github.com/openai/whisper.git
 
       - name: Transcrire l'audio avec Whisper
         run: |
