--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,8 +1,8 @@
-name: Mise à jour automatique de l'ATIS
+name: Mise à jour automatique de l'ATIS (modèle finetuné)
 on:
   schedule:
-    - cron: '22,52 * * * *'  # Exécute chaque heure à 22 et 52 minutes
-  workflow_dispatch:  # Permet de lancer manuellement
+    - cron: '22,52 * * * *'  # Exécution toutes les heures à 22 et 52 minutes
+  workflow_dispatch:         # Permet un déclenchement manuel
 
 jobs:
   update-atis:
@@ -17,11 +17,12 @@ jobs:
         run: |
           echo "atis_tallinn.mp3" >> .gitignore
           echo "atis_tallinn.txt" >> .gitignore
+          echo "whisper-atis.pt" >> .gitignore
 
       - name: Installer les dépendances système
         run: |
           sudo apt update
-          sudo apt install -y ffmpeg curl
+          sudo apt install -y ffmpeg curl wget perl
 
       - name: Configurer le cache Python
         uses: actions/cache@v3
@@ -31,9 +32,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Installer Whisper (avec cache)
+      - name: Installer Whisper et télécharger le modèle finetuné ATIS
         run: |
           pip install git+https://github.com/openai/whisper.git
+          # Télécharger le modèle finetuné pour l'ATIS
+          wget https://huggingface.co/skytemple/whisper-medium-atc/resolve/main/model.pt -O /tmp/whisper-atis.pt
 
       - name: Enregistrer le flux ATIS avec curl et ffmpeg
         run: |
@@ -42,29 +45,59 @@ jobs:
                "https://s1-fmt2.liveatc.net/eetn2_atis" | \
           ffmpeg -i pipe:0 -t 60 -y atis_tallinn.mp3
 
-      - name: Transcrire l'audio avec Whisper
+      - name: Transcrire avec le modèle finetuné ATIS
         run: |
-          whisper atis_tallinn.mp3 --model base --language English --output_format txt --output_dir .
-
-      - name: Afficher la transcription
-        run: |
+          whisper atis_tallinn.mp3 \
+            --model medium \
+            --language English \
+            --output_format txt \
+            --output_dir . \
+            --fp16 False \
+            --model_path /tmp/whisper-atis.pt
+          # Post-traitement avancé pour standardiser le format ATIS
+          sed -i -e 's/ degrees/°/g' \
+                 -e 's/ kilo[^ ]* meters/km/g' \
+                 -e 's/ Celsius/°C/g' \
+                 -e 's/ transition level/Transition Level/g' \
+                 -e 's/ QNH \([0-9]\{4\}\)/QNH \1 hPa/g' \
+                 -e 's/\([0-9]\) \([0-9]\)/\1\2/g' \
+                 -e 's/\([0-9]\),\([0-9]\)/\1\2/g' \
+                 -e 's/\([0-9]\)\([0-9]\)\([0-9]\)°/\1\2\3°/g' \
+                 -e 's/ATIS information \([A-Z]\)/ATIS information \1:/g' \
+                 atis_tallinn.txt
+          # Afficher la transcription finale
+          echo "Transcription finale :"
           cat atis_tallinn.txt
 
-      - name: Nettoyer et mettre à jour index.html avec la transcription
+      - name: Mettre à jour index.html avec la transcription
         run: |
           if [ -f atis_tallinn.txt ]; then
-            # Nettoyer la transcription : remplacer les sauts de ligne, échapper les caractères spéciaux
-            transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/"/\\"/g' -e "s/'/\\'"'"'/g" -e 's/  */ /g')
-            # Remplacer le contenu de la balise div#atis-message en conservant la mise en forme
-            sed -i "/<div id=\"atis-message\">/,/<\/div>/ {
-              /<div id=\"atis-message\">/! { /<\/div>/! d; };
-              s|<div id=\"atis-message\">.*</div>|<div id=\"atis-message\">\n        <p>$transcription</p>\n    </div>|
-            }" index.html
+            # Échapper les caractères spéciaux pour HTML
+            transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/"/\\&quot;/g' -e "s/'/\\&#39;/g")
+            # Créer une copie de sauvegarde
+            cp index.html index.html.bak
+            # Utiliser awk pour une substitution robuste
+            awk -v trans="$transcription" '
+            BEGIN { in_div = 0 }
+            {
+              if ($0 ~ /<div id="atis-message">/) {
+                print $0
+                print "        <p>" trans "</p>"
+                in_div = 1
+              }
+              else if ($0 ~ /<\/div>/ && in_div) {
+                print $0
+                in_div = 0
+              }
+              else if (!in_div) {
+                print $0
+              }
+            }' index.html.bak > index.html
             # Afficher le résultat pour vérification
             echo "Contenu mis à jour dans index.html :"
             grep -A5 "<div id=\"atis-message\">" index.html
           else
-            echo "Erreur : le fichier atis_tallinn.txt est manquant."
+            echo "Erreur : le fichier atis_tallinn.txt est manquant." >&2
             exit 1
           fi
 
@@ -73,11 +106,11 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
-          # Vérifier s'il y a des changements (même minimes)
+          # Vérifier s'il y a des changements
           if git diff-index --quiet HEAD; then
             echo "Aucun changement détecté dans index.html."
           else
             timestamp=$(date +"%Y-%m-%d %H:%M:%S")
-            git commit -m "Mise à jour ATIS Tallinn : $timestamp"
+            git commit -m "Mise à jour ATIS Tallinn (modèle finetuné) : $timestamp"
             git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
           fi
