--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -2,8 +2,8 @@ name: Mise à jour automatique de l'ATIS
 
 on:
   schedule:
-    - cron: '22,52 * * * *'  # Exécution toutes les heures à 22 et 52 minutes
-  workflow_dispatch:         # Déclenchement manuel possible
+    - cron: "22,52 * * * *"   # Exécution toutes les heures à 22 et 52 minutes UTC
+  workflow_dispatch:          # Déclenchement manuel possible
 
 jobs:
   update-atis:
@@ -63,22 +63,22 @@ jobs:
                   "whiskey": "Whiskey", "x-ray": "X-ray", "yankee": "Yankee", "zulu": "Zulu"
               }
               for k,v in nato.items():
-                  text = re.sub(rf"\b{k}\b", v, text, flags=re.IGNORECASE)
+                  text = re.sub(rf"\\b{k}\\b", v, text, flags=re.IGNORECASE)
 
               numbers = {
                   "zero": "0", "one": "1", "two": "2", "three": "3", "four": "4",
                   "five": "5", "six": "6", "seven": "7", "eight": "8", "nine": "9"
               }
               for k,v in numbers.items():
-                  text = re.sub(rf"\b{k}\b", v, text, flags=re.IGNORECASE)
+                  text = re.sub(rf"\\b{k}\\b", v, text, flags=re.IGNORECASE)
 
-              text = re.sub(r"QNH\s*([0-9 ]{3,5})", lambda m: f"QNH {m.group(1).replace(' ', '')} hPa", text, flags=re.IGNORECASE)
-              text = re.sub(r"([0-9]{2,3})\s*degrees?\s*([0-9]{1,2})\s*knots?", r"Wind: \1° / \2 kt", text, flags=re.IGNORECASE)
-              text = re.sub(r"temperature\s*([\-0-9]{1,2})", r"Temperature: \1°C", text, flags=re.IGNORECASE)
-              text = re.sub(r"visibility\s*([0-9]+)\s*kilo?met(er|re)?s?", r"Visibility: \1 km", text, flags=re.IGNORECASE)
-              text = re.sub(r"transition level\s*([0-9]+)", r"Transition Level: \1", text, flags=re.IGNORECASE)
-              text = re.sub(r"runway in use\s*([0-9]{2})", r"Runway in use: \1", text, flags=re.IGNORECASE)
-              text = re.sub(r"ATIS information\s*([A-Z])", r"ATIS Information \1:", text, flags=re.IGNORECASE)
+              text = re.sub(r"QNH\\s*([0-9 ]{3,5})", lambda m: f"QNH {m.group(1).replace(' ', '')} hPa", text, flags=re.IGNORECASE)
+              text = re.sub(r"([0-9]{2,3})\\s*degrees?\\s*([0-9]{1,2})\\s*knots?", r"Wind: \\1° / \\2 kt", text, flags=re.IGNORECASE)
+              text = re.sub(r"temperature\\s*([\\-0-9]{1,2})", r"Temperature: \\1°C", text, flags=re.IGNORECASE)
+              text = re.sub(r"visibility\\s*([0-9]+)\\s*kilo?met(er|re)?s?", r"Visibility: \\1 km", text, flags=re.IGNORECASE)
+              text = re.sub(r"transition level\\s*([0-9]+)", r"Transition Level: \\1", text, flags=re.IGNORECASE)
+              text = re.sub(r"runway in use\\s*([0-9]{2})", r"Runway in use: \\1", text, flags=re.IGNORECASE)
+              text = re.sub(r"ATIS information\\s*([A-Z])", r"ATIS Information \\1:", text, flags=re.IGNORECASE)
               return text.strip()
 
           def main():
@@ -89,7 +89,7 @@ jobs:
               raw = infile.read_text(encoding="utf-8")
               cleaned = normalize_atis(raw)
               infile.write_text(cleaned, encoding="utf-8")
-              print("✅ ATIS formaté :\n")
+              print("✅ ATIS formaté :\\n")
               print(cleaned)
 
           if __name__ == "__main__":
@@ -103,8 +103,8 @@ jobs:
       - name: Mettre à jour index.html avec la transcription
         run: |
           if [ -f atis_tallinn.txt ]; then
-            transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/&/\&amp;/g' -e 's/</\&lt;/g' -e 's/>/\&gt;/g' -e 's/"/\&quot;/g' -e "s/'/\&#39;/g")
-            sed -i '/<div id="atis-message">/,/<\/div>/c\<div id="atis-message">\n        <p>'"$transcription"'</p>\n      </div>' index.html
+            transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/&/\\&amp;/g' -e 's/</\\&lt;/g' -e 's/>/\\&gt;/g' -e 's/"/\\&quot;/g' -e "s/'/\\&#39;/g")
+            sed -i '/<div id="atis-message">/,/<\\/div>/c\<div id="atis-message">\\n        <p>'"$transcription"'</p>\\n      </div>' index.html
             echo "Contenu mis à jour dans index.html :"
             grep -A3 "<div id=\"atis-message\">" index.html
           else
@@ -123,3 +123,4 @@ jobs:
             timestamp=$(date +"%Y-%m-%d %H:%M:%S")
             git commit -m "Mise à jour ATIS Tallinn : $timestamp"
             git push
+          fi
