--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,9 +1,8 @@
 name: Mise à jour automatique de l'ATIS
-
 on:
   schedule:
-    - cron: "22,52 * * * *"   # Toutes les heures à 22 et 52 minutes UTC
-  workflow_dispatch:
+    - cron: '22,52 * * * *'  # Exécution toutes les heures à 22 et 52 minutes
+  workflow_dispatch:         # Permet un déclenchement manuel
 
 jobs:
   update-atis:
@@ -14,15 +13,15 @@ jobs:
         with:
           token: ${{ secrets.ATIS_TOKEN }}
 
-      - name: Créer/mettre à jour .gitignore
+      - name: Créer un fichier .gitignore
         run: |
-          grep -qxF "atis_tallinn.mp3" .gitignore || echo "atis_tallinn.mp3" >> .gitignore
-          grep -qxF "atis_tallinn.txt" .gitignore || echo "atis_tallinn.txt" >> .gitignore
+          echo "atis_tallinn.mp3" >> .gitignore
+          echo "atis_tallinn.txt" >> .gitignore
 
       - name: Installer les dépendances système
         run: |
           sudo apt update
-          sudo apt install -y ffmpeg curl python3 python3-pip
+          sudo apt install -y ffmpeg curl python3-pip
 
       - name: Configurer le cache Python
         uses: actions/cache@v3
@@ -39,13 +38,13 @@ jobs:
       - name: Enregistrer le flux ATIS avec curl et ffmpeg
         run: |
           curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
-          ffmpeg -i pipe:0 -t 90 -y atis_tallinn.mp3
+          ffmpeg -i pipe:0 -t 60 -y atis_tallinn.mp3
 
-      - name: Transcrire avec Whisper
+      - name: Transcrire avec Whisper (modèle medium)
         run: |
           whisper atis_tallinn.mp3 --model medium --language English --output_format txt --output_dir .
 
-      - name: Ajouter script de post-traitement Python
+      - name: Créer script Python pour format ATIS
         run: |
           cat > atis_formatter.py << 'EOF'
           import re
@@ -54,20 +53,20 @@ jobs:
 
           def normalize_atis(text: str) -> str:
               nato = {
-                  "alva": "Alpha", "alpha": "Alpha", "bravo": "Bravo", "charlie": "Charlie",
-                  "delta": "Delta", "echo": "Echo", "foxtrot": "Foxtrot", "golf": "Golf",
-                  "hotel": "Hotel", "india": "India", "juliett": "Juliet", "kilo": "Kilo",
-                  "lima": "Lima", "mike": "Mike", "november": "November", "oscar": "Oscar",
-                  "papa": "Papa", "quebec": "Quebec", "romeo": "Romeo", "sierra": "Sierra",
-                  "tango": "Tango", "uniform": "Uniform", "victor": "Victor",
-                  "whiskey": "Whiskey", "x-ray": "X-ray", "yankee": "Yankee", "zulu": "Zulu"
+                  "alfa":"Alpha","alpha":"Alpha","bravo":"Bravo","charlie":"Charlie",
+                  "delta":"Delta","echo":"Echo","foxtrot":"Foxtrot","golf":"Golf",
+                  "hotel":"Hotel","india":"India","juliett":"Juliet","kilo":"Kilo",
+                  "lima":"Lima","mike":"Mike","november":"November","oscar":"Oscar",
+                  "papa":"Papa","quebec":"Quebec","romeo":"Romeo","sierra":"Sierra",
+                  "tango":"Tango","uniform":"Uniform","victor":"Victor",
+                  "whiskey":"Whiskey","x-ray":"X-ray","yankee":"Yankee","zulu":"Zulu"
               }
               for k,v in nato.items():
                   text = re.sub(rf"\b{k}\b", v, text, flags=re.IGNORECASE)
 
               numbers = {
-                  "zero": "0", "one": "1", "two": "2", "three": "3", "four": "4",
-                  "five": "5", "six": "6", "seven": "7", "eight": "8", "nine": "9"
+                  "zero":"0","one":"1","two":"2","three":"3","four":"4",
+                  "five":"5","six":"6","seven":"7","eight":"8","nine":"9"
               }
               for k,v in numbers.items():
                   text = re.sub(rf"\b{k}\b", v, text, flags=re.IGNORECASE)
@@ -97,15 +96,29 @@ jobs:
               main()
           EOF
 
-      - name: Post-traitement avec Python
-        run: |
-          python atis_formatter.py
+      - name: Formater transcription ATIS
+        run: python atis_formatter.py
 
-      - name: Mettre à jour index.html
+      - name: Mettre à jour index.html avec la transcription
         run: |
           if [ -f atis_tallinn.txt ]; then
-            transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/&/\&amp;/g' -e 's/</\&lt;/g' -e 's/>/\&gt;/g' -e 's/"/\&quot;/g' -e "s/'/\&#39;/g")
-            sed -i '/<div id="atis-message">/,/<\/div>/c\<div id="atis-message">\n        <p>'"$transcription"'</p>\n      </div>' index.html
+            transcription=$(tr '\n' ' ' < atis_tallinn.txt | sed -e 's/&/\&amp;/g' -e 's/</\&lt;/g' -e 's/>/\&gt;/g' -e 's/"/\&quot;/g' -e "s/'/\&#39;/g")
+            tmpfile=$(mktemp)
+            awk -v trans="$transcription" '
+            BEGIN { in_div=0 }
+            {
+              if ($0 ~ /<div id="atis-message">/) {
+                print $0
+                print "        <p>" trans "</p>"
+                in_div=1
+              } else if ($0 ~ /<\/div>/ && in_div) {
+                print $0
+                in_div=0
+              } else if (!in_div) {
+                print $0
+              }
+            }' index.html > "$tmpfile"
+            mv "$tmpfile" index.html
             echo "Contenu mis à jour dans index.html :"
             grep -A3 "<div id=\"atis-message\">" index.html
           else
@@ -113,14 +126,15 @@ jobs:
             exit 1
           fi
 
-      - name: Commit et push
+      - name: Valider et pousser les modifications
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
           if git diff-index --quiet HEAD; then
-            echo "Aucun changement dans index.html."
+            echo "Aucun changement détecté dans index.html."
           else
             timestamp=$(date +"%Y-%m-%d %H:%M:%S")
             git commit -m "Mise à jour ATIS Tallinn : $timestamp"
-            git push
+            git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
+          fi
