--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,4 +1,4 @@
-name: Mise à jour de l'ATIS
+name: Mise à jour automatique de l'ATIS
 on:
   schedule:
     - cron: '22,52 * * * *'
@@ -8,13 +8,12 @@ jobs:
   update-atis:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (shallow)
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.ATIS_TOKEN }}
-          fetch-depth: 1
 
-      - name: Installer ffmpeg/curl (optimisé)
+      - name: Installer les dépendances système
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y --no-install-recommends ffmpeg curl
@@ -25,41 +24,47 @@ jobs:
           path: ~/.cache/whisper
           key: whisper-model-small-${{ hashFiles('**/process_atis.py') }}
 
-      - name: Installer Whisper (modèle small)
+      - name: Installer Whisper
         run: pip install git+https://github.com/openai/whisper.git
 
-      - name: Enregistrer l'ATIS (45s max)
+      - name: Enregistrer le flux ATIS
         run: |
           curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
           ffmpeg -i pipe:0 -t 90 -y atis_tallinn.mp3
 
-      - name: Transcrire avec Whisper (modèle small)
+      - name: Transcrire avec Whisper
         run: whisper atis_tallinn.mp3 --model small --language English --output_format txt
 
-      - name: Post-traitement ATIS
+      - name: Post-traitement du message ATIS
         run: python3 process_atis.py atis_tallinn.txt > atis_structured.html
 
       - name: Mettre à jour index.html
         run: |
+          # Sauvegarder le fichier index.html
           cp index.html index.html.bak
-          awk 'BEGIN { in_div = 0 } {
+          # Remplacer le contenu de la div "atis-message"
+          awk '
+          BEGIN { in_div = 0 }
+          {
             if ($0 ~ /<div id="atis-message">/) {
-              print $0;
-              while (getline line < "atis_structured.html") print line;
-              close("atis_structured.html");
-              in_div = 1;
-            } else if ($0 ~ /<\/div>/ && in_div) {
-              print $0;
-              in_div = 0;
-            } else if (!in_div) print $0;
+              print $0
+              while (getline line < "atis_structured.html") print line
+              close("atis_structured.html")
+              in_div = 1
+            }
+            else if ($0 ~ /<\/div>/ && in_div) {
+              print $0
+              in_div = 0
+            }
+            else if (!in_div) print $0
           }' index.html.bak > index.html
 
-      - name: Commit & Push (si changements)
+      - name: Valider et pousser les modifications
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
           if ! git diff-index --quiet HEAD; then
-            git commit -m "ATIS Update: $(date +'%Y-%m-%d %H:%M:%S')"
+            git commit -m "Mise à jour ATIS: $(date +'%Y-%m-%d %H:%M:%S')"
             git push -f https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
           fi
