--- a/.github/workflows/test_atis_decoding.yml
+++ b/.github/workflows/test_atis_decoding.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       atis_file:
-        description: 'Nom du fichier ATIS à décoder (ex: ATIS_tallinn.txt)'
+        description: 'Nom du fichier ATIS à décoder (ex: atis_tallinn.txt)'
         required: true
         default: 'ATIS_tallinn.txt'
 
